name:                Day11
version:             0.1.0.0
synopsis:            day 11 from advent of code 2017
license-file:        LICENSE
author:              Carsten Koenig
maintainer:          Carsten@gettingsharper.de
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable Day11
  main-is:             Day11.hs
  other-modules:       Parser
  build-depends:       base >=4.9 && < 5
                     , containers
  default-language:    Haskell2010