name:                Day19
version:             0.1.0.0
synopsis:            day 19 from advent of code 2017
license-file:        LICENSE
author:              Carsten Koenig
maintainer:          Carsten@gettingsharper.de
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable Day19
  main-is:             Day19.hs
  other-modules:       Parser
                     , Graph
  build-depends:       base >=4.9 && < 5
                     , containers
                     , text
  default-language:    Haskell2010